# libspatialSEIR

./: .gitmodules  CMakeLists.txt  Doxyfile  LICENSE.txt  NOTES.txt  README.rst  index.html  params.json
R/: README.rst
R/dev_package/: DESCRIPTION  NAMESPACE
R/dev_package/R/: buildSEIRModel.R  checkConvergence.R  generateCompartmentProposal.R  generateCompartmentProposal2.R  qSEIR.R  qSpatialSEIR.R  spatialSEIRInteraface.R  zzz.R
R/dev_package/man/: generateCompartmentProposal.Rd  plotCompartment.Rd  plotTwoCompartments.Rd  spatialSEIR-package.Rd  spatialSEIRInterface.Rd  spatialSEIRModel.Rd
R/dev_package/src/: Makevars  Makevars.win  Makevars_release  Makevars_release.win  dataModel.cpp  distanceModel.cpp  exposureModel.cpp  initialValueContainer.cpp  reinfectionModel.cpp  samplingControl.cpp  spatialSEIRInterface.cpp  spatialSEIRModel.cpp  transitionPriors.cpp
R/dev_package/src/include/: dataModel.hpp  distanceModel.hpp  exposureModel.hpp  initialValueContainer.hpp  modelComponent.hpp  (+5 more)
R/package/: DESCRIPTION  NAMESPACE
R/package/R/: RcppExports.R  generateCompartmentProposal.R  generateSerialSEIRProposal.R  plotEpidemicCompartment.R  plotEpidemicCompartmentCompare.R  spatialSEIRInteraface.R
R/package/data/: spatialSEIR.version.rda
R/package/man/: rcppTestEntry.Rd  spatialSEIR-package.Rd  spatialSEIR.version.Rd  spatialSEIRInit.Rd
R/package/src/: Makevars  RcppExports.cpp  rcppTestEntry.cpp  spatialSEIRInit.cpp  spatialSEIRInterface.cpp
R/release_package/: install.sh  install_win.bat
R/scripts/: README.rst  spatialSEIRInitTest.R
clBLAS/: README.rst
doc/html/: CompartmentalModelMatrix_8cpp.html  CompartmentalModelMatrix_8hpp.html  CompartmentalModelMatrix_8hpp_source.html  CovariateMatrix_8cpp.html  CovariateMatrix_8hpp.html  CovariateMatrix_8hpp_source.html  DistanceMatrix_8cpp.html  DistanceMatrix_8hpp.html  DistanceMatrix_8hpp_source.html  FC__Beta_8cpp.html  FC__Beta__P__RS_8cpp.html  FC__E0_8cpp.html  FC__E__star_8cpp.html  FC__Gamma_8cpp.html  FC__Gamma__EI_8cpp.html  FC__Gamma__IR_8cpp.html  FC__I0_8cpp.html  FC__R0_8cpp.html  FC__R__star_8cpp.html  FC__Rho_8cpp.html  FC__S0_8cpp.html  FC__S__star_8cpp.html  FullConditional_8cpp.html  IOProvider_8cpp.html  IOProvider_8hpp.html  IOProvider_8hpp_source.html  LSS__FC__Beta_8hpp.html  LSS__FC__Beta_8hpp_source.html  LSS__FC__Beta__P__RS_8hpp.html  LSS__FC__Beta__P__RS_8hpp_source.html  LSS__FC__E0_8hpp.html  LSS__FC__E0_8hpp_source.html  LSS__FC__E__star_8hpp.html  LSS__FC__E__star_8hpp_source.html  LSS__FC__Gamma_8hpp.html  LSS__FC__Gamma_8hpp_source.html  LSS__FC__Gamma__EI_8hpp.html  LSS__FC__Gamma__EI_8hpp_source.html  LSS__FC__Gamma__IR_8hpp.html  LSS__FC__Gamma__IR_8hpp_source.html  (+274 more)
doc/html/search/: all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_7.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_78.js  all_7a.js  all_7e.js  all_8.js  all_9.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_6.js  classes_63.js  (+95 more)
doc/models/: Ebola2014Analysis.tex  SEIR_Algo.tex
doc/tutorials/: EbolaTutorial.Rmd  EbolaTutorial.html  GoogleFluTutorial1.Rmd  LSS_EbolaTutorial.html
doc/tutorials/Ebola2014/: Ebola2014.Rhtml  Ebola2014.html  Ebola2014_PastPred.Rhtml  Ebola2014_PastPred.html
libSpatialSEIR/: CMakeLists.txt
libSpatialSEIR/include/: FullConditional.hpp  IOProvider.hpp  LSS_IterationTasks.hpp  LSS_Samplers.hpp  ModelContext.hpp  OCLProvider.hpp  RandomNumberProvider.hpp  dgemv.h
libSpatialSEIR/include/DataStructures/: CompartmentalModelMatrix.hpp  CovariateMatrix.hpp  DistanceMatrix.hpp
libSpatialSEIR/include/FullConditionals/: FullConditional.hpp  LSS_FC_Beta.hpp  LSS_FC_Beta_P_RS.hpp  LSS_FC_E0.hpp  LSS_FC_E_star.hpp  LSS_FC_Gamma.hpp  LSS_FC_Gamma_EI.hpp  LSS_FC_Gamma_IR.hpp  LSS_FC_Hybrid_Reinfection.hpp  LSS_FC_I0.hpp  LSS_FC_I_star.hpp  LSS_FC_P_EI.hpp  LSS_FC_P_IR.hpp  LSS_FC_P_SE.hpp  LSS_FC_R0.hpp  LSS_FC_R_star.hpp  LSS_FC_Rho.hpp  LSS_FC_S0.hpp  LSS_FC_S_star.hpp  LSS_FullConditional.hpp  LSS_FullConditionalList.hpp  LSS_Posterior.hpp
libSpatialSEIR/include/clBLAS/: clBLAS.version.h
libSpatialSEIR/src/: CMakeLists.txt  CompartmentalModelMatrix.cpp  CovariateMatrix.cpp  DistanceMatrix.cpp  FullConditional.cpp  IOProvider.cpp  ModelContext.cpp  ModelContextSummaryFunctions.cpp  OCLFunctions.cpp  OCLProvider.cpp  Proposals.cpp  RandomNumberProvider.cpp  Samplers.cpp
libSpatialSEIR/src/FullConditionals/: FC_Beta.cpp  FC_Beta_P_RS.cpp  FC_E0.cpp  FC_E_star.cpp  FC_Gamma.cpp  FC_Gamma_EI.cpp  FC_Gamma_IR.cpp  FC_Hybrid_Reinfection.cpp  FC_I0.cpp  FC_I_star.cpp  FC_P_EI.cpp  FC_P_IR.cpp  FC_P_SE.cpp  FC_Posterior.cpp  FC_R0.cpp  FC_R_star.cpp  FC_Rho.cpp  FC_S0.cpp  FC_S_star.cpp  FullConditional.cpp
libSpatialSEIR/src/IterationTasks/: PerformDecorrelationStep.cpp  PerformHybridIR_RS_UpdateStep.cpp  PerformHybridSE_EI_UpdateStep.cpp  SetCompartmentSamplingIndicesTask.cpp
libSpatialSEIR/src/OCL/: Deterministic.cpp
libSpatialSEIR/src/kernels/: R_Star_FC.cl  R_Star_FC_Part1.cl  p_se_kernel1.cl  p_se_kernel2.cl  test_kernel.cl
libspatialSEIR/include/: OCLProvider.hpp
libspatialSEIR/include/DataStructures/: CompartmentalModelMatrix.hpp  CovariateMatrix.hpp
libspatialSEIR/src/: OCLProvider.cpp
python/: README.rst
scripts/: README.rst  parallelChainTest.R  singleLocationNoReinfect.R  singleLocationSerialSEIR.R  singleLocationTest.R  spatialSEIRFluTest.R  spatialSEIRInitTest.R
scripts/imgOut/single/: readme.txt
scripts/scriptData/OSM/: CityLatLon.delim  LICENSE.txt  list_of_cities_in_iowa.txt
scripts/scriptData/census/: ProcessedPopulationData.csv  README.txt  SUB-EST2009-04-19.csv  SUB-EST2009-04-19_v2.csv  SUB-EST2011_19.csv
scripts/scriptData/fluTrends/: fluDataProcessed.csv  fluPopulation.csv  neighborhood.csv  temperatureData.csv
scripts/scriptDataProcessing/: ProcessCensus.py
scripts/simulation/: simulateIowaData.R
(+28 files in other folders)
